--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,7 @@ body{
   }
   
   .content{
-    background-color: rgba(206, 17, 38, 0.72);
+    background-color: rgba(98, 146, 209, 0.696);
     /* height: 600px; */
     margin-left: 20%;
     margin-right: 20%;
@@ -66,12 +66,12 @@ body{
   
   .research{
     text-decoration: underline;
-    color: white;
+    color: rgb(23, 21, 21);
   }
   
   .clear{
     border-radius: 5px;
-    color: #000000;
+    color: #2229f3;
     background-color: #FCD116;
     text-align: center;
     border: solid 1px #000000;
